Update Main_Control.java