@@ -1,37 +1,45 @@
-import java.util.Arrays;
-import java.util.Scanner;
-import java.io.Console;
-
 public class Main_Control {
     public static void main(String[] args) {
-        Scanner scanner = new Scanner(System.in);
-        Usuario usuario = new Usuario("Naoto", "naoto123", "senhaSegura");
+        var scanner = new java.util.Scanner(System.in);
 
-        System.out.print("Login: ");
+        // Entrada dinâmica de login e senha
+        System.out.print("Digite seu nome: ");
+        String nome = scanner.nextLine();
+
+        System.out.print("Digite seu login: ");
         String login = scanner.nextLine();
 
         String senha;
-        Console console = System.console();
+        var console = System.console();
         if (console != null) {
-            char[] senhaChars = console.readPassword("Senha: ");
+            char[] senhaChars = console.readPassword("Digite sua senha: ");
             senha = new String(senhaChars);
         } else {
-            System.out.println("⚠️ Console não disponível. Usando Scanner como alternativa.");
-            System.out.print("Senha: ");
+            System.out.println("⚠️ Console não disponível. Usando entrada visível.");
+            System.out.print("Digite sua senha: ");
             senha = scanner.nextLine();
         }
 
-        if (valida.validar(usuario, login, senha)) {
+        // Criação do usuário com dados informados
+        var usuario = new Usuario(nome, login, senha);
+
+        // Validação simples (simula login com os mesmos dados)
+        System.out.print("Confirme seu login: ");
+        String loginConfirmado = scanner.nextLine();
+
+        System.out.print("Confirme sua senha: ");
+        String senhaConfirmada = scanner.nextLine();
+
+        if (valida.validar(usuario, loginConfirmado, senhaConfirmada)) {
             System.out.println("✅ Login autorizado. Bem-vindo, " + usuario.getNome());
 
-            Drone drone1 = new Drone("RDBLL5", "Red Bull", StatusDrone.PRONTO, 25.0f);
-
-            bd_drone bd = new bd_drone(); 
+            var drone1 = new Drone("RDBLL5", "Red Bull", StatusDrone.PRONTO, 25.0f);
+            var bd = new bd_drone(); 
             bd.inserirDrone(drone1);
             bd.listarDrones();
 
-            Missao missao = new Missao("MS003", "Monitoramento da Área 5 - Soja",
-                    Arrays.asList("Captura de imagem", "Leitura de temperatura"));
+            var missao = new Missao("MS003", "Monitoramento da Área 5 - Soja",
+                    java.util.List.of("Captura de imagem", "Leitura de temperatura"));
 
             drone1.receberParametrosMissao(missao);
             drone1.executarMissao(missao);
